Footer text no longer overlaps over content

--- a/css/main.css
+++ b/css/main.css
@@ -4,6 +4,10 @@ body, button, code, input, a {
 	color: rgb(248, 248, 248);
 }
 
+body , footer {
+	background-color: rgb(29, 29, 29);
+}
+
 button, code, input {
 	background: transparent;
 	border: 2px solid rgb(170, 170, 170);
@@ -13,7 +17,6 @@ button, code, input {
 /* Modifying individual elements */
 
 body {
-	background-color: rgb(29, 29, 29);
 	font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
 	font-size: xx-large;
 	text-align: center;
